sankore (2.00~git20130309-1) UNRELEASED; urgency=low

  [ Miriam Ruiz ]
  * New upstream release, obtained from git, corresponding to commits:
  * Initial release (closes: #673322), obtained from git,
    corresponding to commits:
    + Sankore-3.1:        3d5330fb193ff74ff115466e92c9d91122f824a1
    + Sankore-ThirdParty: 735e68f1b75c5ece90f5c1d50798e1d07eca51a9
  * Add patches:
    + 001_build_opts.patch
    + 002_absolute_dirs.patch
    + 003_qt_pre_4.7.patch
    + 004_includes.patch
    + 005_enable_i18n.patch
    + 011_UBGraphicsAristo.patch
    + 012_UBDesktopPropertyPalette.patch

  [ Mike Gabriel ]
  * Include upstream changelog (release notes) into package.
  * Use bin:package libjs-query as jquery.js/jquery.min.js provider.

 -- Miriam Ruiz <miriam@debian.org>  Wed, 06 Mar 2013 13:05:21 +0100